tests/baselines/reference/privateNamesUnique-1.errors.txt
privateNamesUnique-1.ts(9,7): error TS2322: Type 'B' is not assignable to type 'A'.
  Property '#foo' in type 'B' refers to a different member that cannot be accessed from within type 'A'.


==== privateNamesUnique-1.ts (1 errors) ====
    class A {
        #foo: number;
    }
    
    class B {
        #foo: number;
    }
    
    const b: A = new B();     // Error: Property #foo is missing
          ~
!!! error TS2322: Type 'B' is not assignable to type 'A'.
!!! error TS2322:   Property '#foo' in type 'B' refers to a different member that cannot be accessed from within type 'A'.
    